--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-#TaskID {
+.taskID {
   margin-bottom: 20px;
   display: block; 
   text-align: center;
@@ -10,9 +10,11 @@
   border-radius: 5px;
   padding: 10px 20px;
   cursor: pointer;
+  overflow: scroll;
+
 }
 
-button {
+.button_menu {
   background-color: #5e4caf;
   border: none;
   color: white;
@@ -29,7 +31,7 @@ button {
 }
 
 button:hover {
-  background-color: green;
+  background-color: rgb(255, 0, 0);
 }
 
 #buttons {
@@ -38,4 +40,29 @@ button:hover {
 }
 h1 {
   text-align: center;
+}
+
+input:invalid {
+  background-color: #ffdddd;
+}
+
+form:invalid {
+  border: 5px solid #ffdddd;
+}
+
+input:valid {
+  background-color: #ddffdd;
+}
+
+form:valid {
+  border: 5px solid #ddffdd;
+}
+
+input:required {
+  border-color: #800000;
+  border-width: 3px;
+}
+
+input:required:invalid {
+  border-color: #c00000;
 }
